force-app/main/default/objects/api_platform__mdt/api_platform__mdt.object-meta.xml
<CustomObject>
    <description>api平台</description>
    <label>api platform</label>
    <pluralLabel>api platform</pluralLabel>
</CustomObject>