force-app/main/default/objects/api_platform__mdt/fields/app_key__c.field-meta.xml
<CustomField>
    <fullName>app_key__c</fullName>
    <label>app_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>