force-app/main/default/objects/api_platform__mdt/fields/methodType__c.field-meta.xml
<CustomField>
    <fullName>methodType__c</fullName>
    <label>methodType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>